tests/errors/multiple-main-procs.ja
procedure main()
    skip

procedure main()
    skip
